ArcticaCMS: Add initial support for fenced code. (See: https://pythonhosted.org/Markdown/extensions/fenced_code_blocks.html).

--- a/css/md1.css
+++ b/css/md1.css
@@ -108,3 +108,13 @@
 	vertical-align: top;
 	max-width: 1000px; display: inline-block;
 }
+
+pre, code
+{
+    font-family: Consolas,"Andale Mono WT","Andale Mono","Bitstream Vera Sans Mono","Nimbus Mono L",Monaco,"Courier New",monospace;
+    font-size: 1em;
+    direction: ltr;
+    text-align: left;
+    background-color: #FFF;
+    color: #666;
+}
